spacing-fixes

--- a/pokemon.css
+++ b/pokemon.css
@@ -30,7 +30,7 @@ html, body{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 400px;
+  /* height: 400px; */
   min-width: 450px;
  }
  main{
@@ -62,8 +62,9 @@ html, body{
  }
 
 #lives{
-  text-align: center;
-  font-size: 18px;
+  text-align: right;
+  /* font-size: 18px; */
+  /* flex: 0.5; */
 }
 
 #word{
@@ -92,21 +93,25 @@ html, body{
 }
 
 .guessWord{
-  font-size: 24px;
+  font-size: 18px;
+  max-width: 30px;
   list-style: none;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 0 10px;
+  text-align: center;
   margin-right: 5px;
   border-bottom: solid black 2px;
+
 }
 .word li{
-  text-align: center;
+
 }
 
 #wrong-guess-wrapper{
   display: flex;
   justify-content: center;
   margin: 25px 0px;
+  /* border: solid yellow 3px; */
+  height: 25px;
 
 }
 #wrong-guess-wrapper s{
@@ -127,11 +132,21 @@ html, body{
 }
 
 #info{
-  margin-top: 15px;
-  text-align: center;
+  /* margin-top: 15px; */
+  /* text-align: center; */
+  flex: 1;
 }
 
 #sprite-wrapper{
   text-align: center;
+  height: 150px;
+  
 }
 
+#info-wrapper{
+  display: flex;
+  margin-top: 25px;
+  
+  /* flex-direction: row; */
+  /* border: solid black 4px; */
+}
